--- a/index.html
+++ b/index.html
@@ -9,23 +9,80 @@
     <link rel="stylesheet" href="assets/css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- FONT AWESOME -->
+    <!-- Font Awesome -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- BOOTSTRAP -->
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <!-- Google Icons -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
+    
+    <!-- NAVBAR NEW -->
+     
+    <nav class="navbar navbar-expand-lg custom-navbar fixed-top">
+        <div class="container-fluid px-5">
+            <a class="navbar-brand" href="./index.html">
+                <img src="assets/images/navbarlogo/logo.png" alt="BIPL Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav justify-space-around me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="./about.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="./our-company.html">Our Company</a>
+                    </li>
 
-    <!-- NAVBAR -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-dark" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Products
+                        </a>
+                        <ul class="dropdown-menu text-dark">
+                            <li><a class="dropdown-item text-dark" href="#">Edible & Non-Edible Oils</a></li>
+                            <li><a class="dropdown-item text-dark" href="#">Chemicals</a></li>
+                            <li><a class="dropdown-item text-dark" href="#">Petroleum & Oil Products</a></li>
+                        </ul>
+                    </li>
 
-    <section>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="./our-services.html">Our Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="./career.html">Careers</a>
+                    </li>
+
+                    <a href="contact-us.html">
+                        <button class="btn btn-orange" href="contact-us.html" type="button">
+                            Contact Us
+                        </button>
+                    </a>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <!-- NAVBAR OLD -->
+
+    <!-- <section>
+        <nav class="navbar custom-navbar navbar-expand-lg fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="assets/images/navbarlogo/logo.png" alt="">
@@ -55,21 +112,17 @@
                         <li class="nav-item mx-4">
                             <a class="nav-link text-dark" href="career.html" aria-disabled="true">Careers</a>
                         </li>
-
                     </ul>
                     <a href="contact-us.html"><button class="btn btn-orange" href="contact-us.html"
                             type="button">Contact Us</button></a>
                 </div>
             </div>
         </nav>
-    </section>
+    </section> -->
 
-    <!-- end of navbar section  -->
+    <!-- CAROUSEL -->
 
-
-    <!-- make a carousel section  -->
-
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -79,28 +132,31 @@
                 aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/home-page-images/homeherosectionimg/image 4 (2).png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block text-start">
+            <div class="carousel-item carousel-item-custom-height active">
+                <img src="assets/images/home-page-images/homeherosectionimg/image 4 (2).png" class="d-block w-100"
+                    alt="...">
+                <div class="carousel-caption text-center">
                     <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
+                    <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
                         worldwide, and you can trust that the quality is always up to standard.</p>
                 </div>
             </div>
-            <div class="carousel-item ">
-                <img src="assets/images/home-page-images/homeherosectionimg/image 2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block text-start">
+            <div class="carousel-item carousel-item-custom-height">
+                <img src="assets/images/home-page-images/homeherosectionimg/image 2.png" class="d-block w-100"
+                    alt="...">
+                <div class="carousel-caption text-center">
                     <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
+                    <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
                         worldwide, and you can trust that the quality is always up to standard.</p>
                 </div>
             </div>
 
-            <div class="carousel-item">
-                <img src="assets/images/home-page-images/homeherosectionimg/image 4 (1).png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block text-start">
+            <div class="carousel-item carousel-item-custom-height">
+                <img src="assets/images/home-page-images/homeherosectionimg/image 4 (1).png" class="d-block w-100"
+                    alt="...">
+                <div class="carousel-caption text-center">
                     <h1>PETROLEUM AND BIO FUEL</h1>
-                    <p>Are you looking for top-quality agriculture commodities and food products? Look no further! We
+                    <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no further! We
                         ship our products all over the world, and our quality meets all the necessary requirements.</p>
                 </div>
             </div>
@@ -206,7 +262,8 @@
                 </div>
                 <div class="col-12 col-md-4 mb-3">
                     <div class="box-a text-bg-light">
-                        <img src="assets/images/home-page-images/about-us-card-image/2.png" class="card-img-top" alt="We Serve Globally">
+                        <img src="assets/images/home-page-images/about-us-card-image/2.png" class="card-img-top"
+                            alt="We Serve Globally">
                         <h3 class="about-card-title text-dark">We Serve Globally</h3>
                         <p class="about-card-text text-black">At Bhagirath BVM Grand, we're dedicated to serving the
                             world. Our products and services know no boundaries, ensuring you receive the best no matter
@@ -246,14 +303,22 @@
             <div class="slider-wrapper">
 
                 <ul class="image-list">
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 1.png" alt="img-1" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 2.png" alt="img-2" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 3.png" alt="img-3" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 4.png" alt="img-4" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 1.png" alt="img-5" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 2.png" alt="img-6" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 3.png" alt="img-7" />
-                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 4.png" alt="img-8" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 1.png"
+                        alt="img-1" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 2.png"
+                        alt="img-2" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 3.png"
+                        alt="img-3" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 4.png"
+                        alt="img-4" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 1.png"
+                        alt="img-5" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 2.png"
+                        alt="img-6" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 3.png"
+                        alt="img-7" />
+                    <img class="image-item" src="assets/images/home-page-images/slider-js-image/slider 4.png"
+                        alt="img-8" />
                 </ul>
 
             </div>
@@ -413,7 +478,7 @@
 
 
     <section class="trading-portfolio py-5 pt-5">
-        <div class="container  trading-p pt-5">
+        <div class="container trading-p pt-5">
             <h2 class="text-center">TRADING PORTFOLIO</h2>
             <p class="text-center">Lorem ipsum dolor sit amet consectetur. Magna blandit proin ut bibendum pharetra
                 vulputate. Ipsum fringilla scelerisque nec eu. Odio euismod ultricies nibh amet eu dignissim morbi
