--- a/products.html
+++ b/products.html
@@ -47,13 +47,14 @@
               <a class="nav-link text-dark" href="our-company.html">Our Company</a>
             </li>
             <li class="nav-item dropdown mx-4">
-                <a class="nav-link dropdown-toggle text-dark" href="#" id="productDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Products</a>
-                <ul class="dropdown-menu" aria-labelledby="productDropdown">
-                  <li><a class="dropdown-item" href="#">Product_Edible & Non-Edible Oils</a></li>
-                  <li><a class="dropdown-item" href="#">Product_Chemicals</a></li>
-                  <li><a class="dropdown-item" href="#">Product_Petroleum & Oil Products</a></li>
-                </ul>
-              </li>
+              <a class="nav-link dropdown-toggle text-dark" href="#" id="productDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">Products</a>
+              <ul class="dropdown-menu" aria-labelledby="productDropdown">
+                <li><a class="dropdown-item" href="#">Product_Edible & Non-Edible Oils</a></li>
+                <li><a class="dropdown-item" href="#">Product_Chemicals</a></li>
+                <li><a class="dropdown-item" href="#">Product_Petroleum & Oil Products</a></li>
+              </ul>
+            </li>
             <li class="nav-item mx-4">
               <a class="nav-link text-dark" href="our-services.html">Our Services</a>
             </li>
@@ -75,30 +76,36 @@
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/product-page/hero-img/Rectangle 29 (4).webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
           <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-          <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide, and you can trust that the quality is always up to standard.</p>
+          <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
+            worldwide, and you can trust that the quality is always up to standard.</p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
         <img src="assets/images/product-page/hero-img/Rectangle 30 (1).webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
           <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-          <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide, and you can trust that the quality is always up to standard.</p>
+          <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
+            worldwide, and you can trust that the quality is always up to standard.</p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
         <img src="assets/images/product-page/hero-img/Rectangle 55.webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
           <h1>PETROLEUM AND BIO FUEL</h1>
-          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no further! We ship our products all over the world, and our quality meets all the necessary requirements.</p>
+          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
+            further! We ship our products all over the world, and our quality meets all the necessary requirements.</p>
         </div>
       </div>
     </div>
@@ -112,116 +119,126 @@
     </button>
   </div>
 
-<!-- maka a product we serve  -->
+  <!-- maka a product we serve  -->
 
 
-<section class="product-we-erve">
+  <section class="product-we-erve">
     <!-- 1st row  -->
     <div class="container pt-4">
 
-<div class="product-top-content text-center pb-3">
-    <h2>PRODUCTS WE SERVES</h2>
-    <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw material requirements.</p>
-</div>
+      <div class="product-top-content text-center pb-3">
+        <h2>PRODUCTS WE SERVES</h2>
+        <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet your
+          global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and pulses,
+          our offerings are designed to fuel industries worldwide. Additionally, we excel in providing high-quality
+          yellow maize for various applications, ensuring a reliable supply chain for your raw material requirements.
+        </p>
+      </div>
 
 
-        <div class="row col-12 card-serve">
-           
-            <div class="card-product col-12 col-md-6 col-lg-6">
-              <img src="assets/images/product-page/product-services-img/rice.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h3>RICE</h3>
-                <p>A Versatile staple food or billions globally, cherished for its nutritional value and culinary diversity.</p>
-                <ul>
-                  <li>Rice is a staple food for billions, providing vital carbohydrates.</li>
-                  <li>Varieties include long-grain, short-grain, and basmati,which offer distinct qualities.</li>
-                  <li>Leading rice producers : China, India, Indonesia.</li>
-                  <li>A versatile ingredient from sushi to risotto.</li>
-                  <li>Vital global food security and agriculture.</li>
-                </ul>
-              </div>
-            </div>
-            
-            <div class="card-product col-12 col-md-6 col-lg-6 ">
-              <img src="assets/images/product-page/product-services-img/soyabean.webp" class="card-img-top" alt="..." >
-              <div class="card-body">
-                <h3>SOYABEANS</h3>
-                <p>Versatile legumes rich in protein and nutrients, used in various industries, including food, animal feed, and oil production.</p>
-                <ul>
-                  <li>Soybeans: major plant-based protein and oil source.</li>
-                  <li>Used in tofu, soy milk, and soybean oil.</li>
-                  <li>Essential for animal feed and biodiesel.</li>
-                  <li>Top producers: U.S., Brazil, Argentina.</li>
-                  <li>Gaining popularity for health benefits and sustainability.</li>
-                </ul>
-              </div>
-            </div>
+      <div class="row col-12 card-serve">
+
+        <div class="card-product col-12 col-md-6 col-lg-6">
+          <img src="assets/images/product-page/product-services-img/rice.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3>RICE</h3>
+            <p>A Versatile staple food or billions globally, cherished for its nutritional value and culinary diversity.
+            </p>
+            <ul>
+              <li>Rice is a staple food for billions, providing vital carbohydrates.</li>
+              <li>Varieties include long-grain, short-grain, and basmati,which offer distinct qualities.</li>
+              <li>Leading rice producers : China, India, Indonesia.</li>
+              <li>A versatile ingredient from sushi to risotto.</li>
+              <li>Vital global food security and agriculture.</li>
+            </ul>
           </div>
+        </div>
 
-          <!-- 2nd row  -->
-          <div class="row col-12">
-            <div class="card-product col-12 col-md-6 col-lg-6">
-              <img src="assets/images/product-page/product-services-img/wheat.webp" class="card-img-top" alt="WHEAT">
-              <div class="card-body">
-                <h3>WHEAT</h3>
-                <p>A widely cultivated grain, a primary source of flour for baking worldwide, adaptable to diverse climates..</p>
-                <ul>
-                  <li>WHEAT, a staple grain, makes bread, pasta, and cereals..</li>
-                  <li>Widely cultivated worldwide.</li>
-                  <li>Major producers : Russia, China, U.S..</li>
-                  <li>Varies in gluten, influencing usage.</li>
-                  <li>Crucial for global food security and diet diversity.</li>
-                </ul>
-              </div>
-            </div>
-            <div class="card-product col-12 col-md-6 col-lg-6 ">
-              <img src="assets/images/product-page/product-services-img/sugar.webp" class="card-img-top" alt="SUGAR">
-              <div class="card-body">
-                <h3>SUGAR</h3>
-                <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient in food processing and confectionery..</p>
-                <ul>
-                  <li>Sugar from sugarcane and sugar beets sweetens products..</li>
-                  <li>Key in confectionery and beverages..</li>
-                  <li>Top producers: Brazil, India, China.</li>
-                  <li>Forms: granulated, brown, powdered..</li>
-                  <li>Concerns about excessive sugar drive interest in alternatives..</li>
-                </ul>
-              </div>
-            </div>
+        <div class="card-product col-12 col-md-6 col-lg-6 ">
+          <img src="assets/images/product-page/product-services-img/soyabean.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3>SOYABEANS</h3>
+            <p>Versatile legumes rich in protein and nutrients, used in various industries, including food, animal feed,
+              and oil production.</p>
+            <ul>
+              <li>Soybeans: major plant-based protein and oil source.</li>
+              <li>Used in tofu, soy milk, and soybean oil.</li>
+              <li>Essential for animal feed and biodiesel.</li>
+              <li>Top producers: U.S., Brazil, Argentina.</li>
+              <li>Gaining popularity for health benefits and sustainability.</li>
+            </ul>
           </div>
-          <!-- 3rd row -->
-          <div class="row col-12">
-            <div class="card-product col-12 col-md-6 col-lg-6">
-              <img src="assets/images/product-page/product-services-img/dal.webp" class="card-img-top" alt="DAL AND PULSES">
-              <div class="card-body">
-                <h3>DAL AND PULSES</h3>
-                <p>Essential plant-based protein sources in many cuisines, including lentils, chickpeas, and beans..</p>
-                <ul>
-                  <li>Dal and pulses provide plant-based protein.</li>
-                  <li>Lentils, chickpeas, and beans offer diverse flavours and textures..</li>
-                  <li>Used in Indian, Mediterranean, and Middle Eastern cuisines..</li>
-                  <li>Vital for vegetarian and vegan diets..</li>
-                  <li>Enhance soil health through nitrogen fixation..</li>
-                </ul>
-              </div>
-            </div>
-            <div class="card-product col-12 col-md-6 col-lg-6 ">
-              <img src="assets/images/product-page/product-services-img/yellow-maize.webp" class="card-img-top" alt="YELLOW MAIZE">
-              <div class="card-body">
-                <h3>YELLOW MAIZE</h3>
-                <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient in food processing and confectionery.</p>
-                <ul>
-                  <li>Sugar from sugarcane and sugar beets sweetens products..</li>
-                  <li>Key in confectionery and beverages..</li>
-                  <li>Top producers: Brazil, India, China.</li>
-                  <li>Forms: granulated, brown, powdered..</li>
-                  <li>Concerns about excessive sugar drive interest in alternatives..</li>
-                </ul>
-              </div>
-            </div>
+        </div>
+      </div>
+
+      <!-- 2nd row  -->
+      <div class="row col-12">
+        <div class="card-product col-12 col-md-6 col-lg-6">
+          <img src="assets/images/product-page/product-services-img/wheat.webp" class="card-img-top" alt="WHEAT">
+          <div class="card-body">
+            <h3>WHEAT</h3>
+            <p>A widely cultivated grain, a primary source of flour for baking worldwide, adaptable to diverse
+              climates..</p>
+            <ul>
+              <li>WHEAT, a staple grain, makes bread, pasta, and cereals..</li>
+              <li>Widely cultivated worldwide.</li>
+              <li>Major producers : Russia, China, U.S..</li>
+              <li>Varies in gluten, influencing usage.</li>
+              <li>Crucial for global food security and diet diversity.</li>
+            </ul>
           </div>
-</div>
-</section>
+        </div>
+        <div class="card-product col-12 col-md-6 col-lg-6 ">
+          <img src="assets/images/product-page/product-services-img/sugar.webp" class="card-img-top" alt="SUGAR">
+          <div class="card-body">
+            <h3>SUGAR</h3>
+            <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient in food
+              processing and confectionery..</p>
+            <ul>
+              <li>Sugar from sugarcane and sugar beets sweetens products..</li>
+              <li>Key in confectionery and beverages..</li>
+              <li>Top producers: Brazil, India, China.</li>
+              <li>Forms: granulated, brown, powdered..</li>
+              <li>Concerns about excessive sugar drive interest in alternatives..</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- 3rd row -->
+      <div class="row col-12">
+        <div class="card-product col-12 col-md-6 col-lg-6">
+          <img src="assets/images/product-page/product-services-img/dal.webp" class="card-img-top" alt="DAL AND PULSES">
+          <div class="card-body">
+            <h3>DAL AND PULSES</h3>
+            <p>Essential plant-based protein sources in many cuisines, including lentils, chickpeas, and beans..</p>
+            <ul>
+              <li>Dal and pulses provide plant-based protein.</li>
+              <li>Lentils, chickpeas, and beans offer diverse flavours and textures..</li>
+              <li>Used in Indian, Mediterranean, and Middle Eastern cuisines..</li>
+              <li>Vital for vegetarian and vegan diets..</li>
+              <li>Enhance soil health through nitrogen fixation..</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card-product col-12 col-md-6 col-lg-6 ">
+          <img src="assets/images/product-page/product-services-img/yellow-maize.webp" class="card-img-top"
+            alt="YELLOW MAIZE">
+          <div class="card-body">
+            <h3>YELLOW MAIZE</h3>
+            <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient in food
+              processing and confectionery.</p>
+            <ul>
+              <li>Sugar from sugarcane and sugar beets sweetens products..</li>
+              <li>Key in confectionery and beverages..</li>
+              <li>Top producers: Brazil, India, China.</li>
+              <li>Forms: granulated, brown, powdered..</li>
+              <li>Concerns about excessive sugar drive interest in alternatives..</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
@@ -229,7 +246,7 @@
 
 
 
-  
+
   <!-- make a footer section  -->
 
   <section class="footer">
