--- a/about.html
+++ b/about.html
@@ -288,7 +288,8 @@
         </section>
 
         <!-- LEADERSHIP AND KEY MANAGEMENT TEAM -->
-        <section class="leadership pt-5">
+
+        <section class="leadership pt-5 pb-7">
             <div class="container">
                 <div class="leadership-content-top text-center">
                     <h2>Leadership & Key Management Team</h2>
@@ -330,15 +331,28 @@
             </div>
         </section>
 
+        <!-- CUSTOM SHAPE DIVIDER -->
+
+        <div style="position: relative;">
+            <div class="custom-shape-divider-bottom-1726045077">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                    preserveAspectRatio="none">
+                    <path
+                        d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                        class="shape-fill"></path>
+                </svg>
+            </div>
+        </div>
+
         <!-- STRATEGIC FRAMEWORK SECTION -->
 
-        <section class="strategic-framework">
+        <section class="strategic-framework py-5">
             <div class="container">
-                <div class="top-Strategic-content text-center pt-5">
+                <div class="top-strategic-content text-center">
                     <h2>Strategic Framework</h2>
                     <p class="text-center">Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
                 </div>
-                <div class="container my-4">
+                <div class="container">
                     <div class="row align-items-center frame-s">
                         <div class="col-lg-8 col-md-12">
                             <div class="strategic-content">
@@ -375,10 +389,10 @@
         <!-- PARTNERS & GROWING RESPONSIBILITY SECTION -->
 
         <section class="partners-growing-responsibility">
-            <div class="container pb-5">
+            <div class="container pt-5 pb-5">
                 <div class="row">
                     <div class="col-md-8">
-                        <div class="partner-growing-content pb-3">
+                        <div class="partner-growing-content pb-2">
                             <h2>Partners & Growing Responsibility</h2>
                             <p>Lorem ipsum dolor sit amet consectetur. Placerat ac eu at tincidunt at.</p>
 
