home page (trading portfolio) + navbar update

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </li>
 
                     <a href="contact-us.html">
-                        <button class="btn btn-orange" href="contact-us.html" type="button">
+                        <button class="btn btn-orange" href="./contact-us.html" type="button">
                             Contact Us
                         </button>
                     </a>
@@ -77,48 +77,6 @@
             </div>
         </div>
     </nav>
-
-
-    <!-- NAVBAR OLD -->
-
-    <!-- <section>
-        <nav class="navbar custom-navbar navbar-expand-lg fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="assets/images/navbarlogo/logo.png" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="about.html">About Us</a>
-                        </li>
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="our-company.html">Our Company</a>
-                        </li>
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="products.html">Products</a>
-                        </li>
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="our-services.html">Our Services</a>
-                        </li>
-                        <li class="nav-item mx-4">
-                            <a class="nav-link text-dark" href="career.html" aria-disabled="true">Careers</a>
-                        </li>
-                    </ul>
-                    <a href="contact-us.html"><button class="btn btn-orange" href="contact-us.html"
-                            type="button">Contact Us</button></a>
-                </div>
-            </div>
-        </nav>
-    </section> -->
 
     <!-- CAROUSEL -->
 
@@ -581,39 +539,37 @@
                 <div class="row">
                     <!-- First Section: Text -->
                     <div class="new-trading-portfolio-box-text col-md-4">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, quas doloremque temporibus
-                            iusto asperiores nemo odio quo libero modi quidem voluptas culpa mollitia unde! Culpa,
-                            obcaecati
-                            at ratione sed cumque amet rerum nam reprehenderit eaque voluptate corporis pariatur,
-                            numquam
-                            earum labore? Exercitationem fuga in cupiditate illum saepe fugit aspernatur nihil eligendi
-                            error harum quaerat doloremque doloribus, modi minus necessitatibus excepturi officia
-                            voluptates
-                            eaque, sint suscipit earum explicabo ex! Soluta facilis esse odit voluptatum dolores
-                            accusantium
-                            possimus expedita perspiciatis officia provident.</p>
+                        <p>Bhagirath BVM Grand (HK) Limited Trading Portfolio. We serve as the catalysts of global
+                            trade, connecting the world through commerce. Our passion for trade transcends borders, and
+                            we're your trusted partner for all things products. From sourcing to supply, we inspire
+                            global trade, providing a reliable gateway to a world of possibilities. Let's shape a future
+                            of global trade that makes things deliver at your doorstep.</p>
                     </div>
 
                     <!-- Second Section: Buttons -->
-                    <div class="new-trading-portfolio-box-buttons col-md-4">
-                        <button class="btn new-trading-portfolio-box-btn"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-image-1.png">Crude
-                            Oil</button>
-                        <button class="btn new-trading-portfolio-box-btn"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-image-1.png">Partnering
-                            Procedure</button>
-                        <button class="btn new-trading-portfolio-box-btn"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-refiners-image-1.png">Working
-                            with Refiners</button>
-                        <button class="btn new-trading-portfolio-box-btn"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-middle-distillates-image-1.png">Middle
-                            Distillates</button>
+                    <div class="new-trading-portfolio-box-buttons col-md-3">
+                        <button class="btn new-trading-portfolio-box-btn text-start"
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.png">
+                            <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
+                            Crude Oil</button>
+                        <button class="btn new-trading-portfolio-box-btn text-start"
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-master-image.png">
+                            <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
+                            Partnering Procedure</button>
+                        <button class="btn new-trading-portfolio-box-btn text-start"
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-refiners-master-image.png">
+                            <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
+                            Working with Refiners</button>
+                        <button class="btn new-trading-portfolio-box-btn text-start"
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-middle-distillates-master-image.png">
+                            <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
+                            Middle Distillates</button>
                     </div>
 
                     <!-- Third Section: Image -->
-                    <div class="new-trading-portfolio-box-image col-md-4">
+                    <div class="new-trading-portfolio-box-image col-md-5">
                         <img id="portfolio-img"
-                            src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-image-1.png"
+                            src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.png"
                             class="img-fluid" alt="Portfolio Image">
                     </div>
                 </div>
