3 new products pages added + minor issues fixed

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                             Products
                         </a>
                         <ul class="dropdown-menu text-dark">
-                            <li><a class="dropdown-item text-dark" href="#">Edible & Non-Edible Oils</a></li>
-                            <li><a class="dropdown-item text-dark" href="#">Chemicals</a></li>
-                            <li><a class="dropdown-item text-dark" href="#">Petroleum & Oil Products</a></li>
+                            <li><a class="dropdown-item text-dark" href="./edible-and-non-edible-oils.html">Edible & Non-Edible Oils</a></li>
+                            <li><a class="dropdown-item text-dark" href="./chemicals.html">Chemicals</a></li>
+                            <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a></li>
                         </ul>
                     </li>
 
@@ -605,7 +605,9 @@
             <div class="row equal-spacing">
                 <!-- frame 35 -->
                 <div class="col-md-3 mb-4">
-                    <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
+                    <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
+                        class="img-fluid-footer-logo"> -->
+                    <img src="./assets/images/footer-section/footer-logo.png" alt="Company Logo"
                         class="img-fluid-footer-logo">
                     <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
@@ -624,7 +626,7 @@
                 </div>
                 <!-- frame 39 -->
                 <div class="col-md-3 mb-4 text-white pt-5">
-                    <h3>CONTACT US</h3>
+                    <h3>Contact Us</h3>
                     <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
                         Tsim Sha Tsui, Kowloon (HK)</p>
                 </div>
