--- a/products.html
+++ b/products.html
@@ -53,9 +53,9 @@
               Products
             </a>
             <ul class="dropdown-menu text-dark">
-              <li><a class="dropdown-item text-dark" href="#">Edible & Non-Edible Oils</a></li>
-              <li><a class="dropdown-item text-dark" href="#">Chemicals</a></li>
-              <li><a class="dropdown-item text-dark" href="#">Petroleum & Oil Products</a></li>
+              <li><a class="dropdown-item text-dark" href="./edible-and-non-edible-oils.html">Edible & Non-Edible Oils</a></li>
+              <li><a class="dropdown-item text-dark" href="./chemicals.html">Chemicals</a></li>
+              <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a></li>
             </ul>
           </li>
 
