--- a/our-company.html
+++ b/our-company.html
@@ -20,6 +20,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -53,9 +55,11 @@
               Products
             </a>
             <ul class="dropdown-menu text-dark">
-              <li><a class="dropdown-item text-dark" href="./edible-and-non-edible-oils.html">Edible & Non-Edible Oils</a></li>
+              <li><a class="dropdown-item text-dark" href="./edible-and-non-edible-oils.html">Edible & Non-Edible
+                  Oils</a></li>
               <li><a class="dropdown-item text-dark" href="./chemicals.html">Chemicals</a></li>
-              <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a></li>
+              <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum & Oil
+                  Products</a></li>
             </ul>
           </li>
 
@@ -355,48 +359,36 @@
   </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- make a footer section  -->
+  <!-- FOOTER -->
 
   <section class="footer">
     <div class="container">
       <div class="row equal-spacing">
         <!-- frame 35 -->
         <div class="col-md-3 mb-4">
-          <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo" class="img-fluid-footer-logo">
-          <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global trade, a
-            company that thrives on connecting the world through commerce.</p>
+          <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
+                      class="img-fluid-footer-logo"> -->
+          <img src="./assets/images/footer-section/footer-logo.png" alt="Company Logo" class="img-fluid-footer-logo">
+          <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+            trade, a company that thrives on connecting the world through commerce.</p>
         </div>
         <!-- frame 40 -->
         <div class="col-md-3 mb-4 text-light pt-5">
           <h3>Useful Links</h3>
           <div class="arrow">
-            <a href="index.html">Home <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-            <a href="#">About Us <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-            <a href="#">Services <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+            <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+            <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+            <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
+                alt=""></a><br>
             <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
             <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
           </div>
         </div>
         <!-- frame 39 -->
         <div class="col-md-3 mb-4 text-white pt-5">
-          <h3>CONTACT US</h3>
-          <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue Tsim Sha
-            Tsui, Kowloon (HK)</p>
+          <h3>Contact Us</h3>
+          <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
+            Tsim Sha Tsui, Kowloon (HK)</p>
         </div>
         <!-- frame 38 -->
         <div class="col-md-3 mb-4 text-white pt-5">
@@ -406,12 +398,26 @@
             <br>
             <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837
           </div>
-          <div class="frame-35-icon pt-3">
-            <img src="assets/images/footer-section/Vector (6).png" alt="icon">
-            <img src="assets/images/footer-section/Vector (7).png" alt="icon">
-            <img src="assets/images/footer-section/Group (3).png" alt="icon">
-            <img src="assets/images/footer-section/Vector (9).png" alt="icon">
-            <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
+          <!-- <div class="frame-35-icon pt-3">
+                      <img src="assets/images/footer-section/Vector (6).png" alt="icon">
+                      <img src="assets/images/footer-section/Vector (7).png" alt="icon">
+                      <img src="assets/images/footer-section/Group (3).png" alt="icon">
+                      <img src="assets/images/footer-section/Vector (9).png" alt="icon">
+                      <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
+                  </div> -->
+          <div class="footer-icon-container">
+            <a class="social-icon" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-facebook"></i>
+            </a>
+            <a class="social-icon" href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-youtube"></i>
+            </a>
+            <a class="social-icon" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-instagram"></i>
+            </a>
+            <a class="social-icon" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-linkedin"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -422,14 +428,6 @@
       </div>
     </div>
   </section>
-
-
-
-
-
-
-
-
 
   <script src="./assets/scripts/script.js"></script>
 
