--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Google Icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -616,9 +618,9 @@
                 <div class="col-md-3 mb-4 text-light pt-5">
                     <h3>Useful Links</h3>
                     <div class="arrow">
-                        <a href="index.html">Home <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="#">About Us <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="#">Services <img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+                        <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+                        <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+                        <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
                         <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
                                 alt=""></a><br>
                         <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
@@ -638,12 +640,31 @@
                         <br>
                         <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837
                     </div>
-                    <div class="frame-35-icon pt-3">
+                    <!-- <div class="frame-35-icon pt-3">
                         <img src="assets/images/footer-section/Vector (6).png" alt="icon">
                         <img src="assets/images/footer-section/Vector (7).png" alt="icon">
                         <img src="assets/images/footer-section/Group (3).png" alt="icon">
                         <img src="assets/images/footer-section/Vector (9).png" alt="icon">
                         <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
+                    </div> -->
+                    <div class="footer-icon-container">
+                        <a class="social-icon"
+                            href="https://www.facebook.com/"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-facebook"></i>
+                        </a>
+                        <a class="social-icon" href="https://www.youtube.com/" target="_blank"
+                            rel="noopener noreferrer">
+                            <i class="bi bi-youtube"></i>
+                        </a>
+                        <a class="social-icon" href="https://www.instagram.com/" target="_blank"
+                            rel="noopener noreferrer">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a class="social-icon" href="https://www.linkedin.com/"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -692,9 +713,3 @@
 </body>
 
 </html>
-
-<!-- background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: top center;
-    background-size: cover;
-    height: 108%; -->
